--- a/app/src/main/res/layout/activity_service_detail.xml
+++ b/app/src/main/res/layout/activity_service_detail.xml
@@ -66,17 +66,83 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/layout_user_profile"
+                    android:layout_width="180dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/viewpager_thumbnails"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="28dp"
+                    android:background="@drawable/bg_user_profile">
+
+                    <ImageView
+                        android:id="@+id/iv_user_profile"
+                        android:layout_width="56dp"
+                        android:layout_height="56dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:background="@drawable/item_user_profile"
+                        android:layout_marginStart="12dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        />
+
+                    <TextView
+                        android:id="@+id/tv_user_nickname"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:text="케이엠"
+                        android:drawableEnd="@drawable/ic_forward_dir"
+                        android:drawablePadding="12dp"
+                        android:gravity="center_vertical"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        app:layout_constraintStart_toEndOf="@id/iv_user_profile"
+                        app:layout_constraintTop_toTopOf="@id/iv_user_profile"
+                        android:layout_marginStart="12dp"
+                        android:textSize="12sp"/>
+
+                    <TextView
+                        android:id="@+id/tv_user_level"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:text="나눔레벨 1"
+                        app:layout_constraintTop_toBottomOf="@id/tv_user_nickname"
+                        app:layout_constraintStart_toStartOf="@id/tv_user_nickname"
+                        android:layout_marginTop="2dp"
+                        android:textSize="12sp"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        />
+
+                    <TextView
+                        android:id="@id/tv_user_rating"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toBottomOf="@id/tv_user_level"
+                        app:layout_constraintStart_toStartOf="@id/tv_user_nickname"
+                        app:layout_constraintBottom_toBottomOf="@id/iv_user_profile"
+                        tools:text="4.9"
+                        android:textColor="@color/black"
+                        android:gravity="center_vertical"
+                        android:textSize="12sp"
+                        android:drawableStart="@drawable/ic_star_filled"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
                 <TextView
                     android:id="@+id/tv_service_sort"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
-                    android:layout_marginTop="28dp"
+                    android:layout_marginTop="24dp"
                     android:textColor="@color/text_color"
                     android:textSize="16sp"
                     android:textStyle="normal"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/viewpager_thumbnails"
+                    app:layout_constraintTop_toBottomOf="@id/layout_user_profile"
                     tools:text="봉사 유형" />
 
                 <TextView
