[FEAT] 봉사활동 게시글 이미지 추가 기능

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -118,6 +118,7 @@
                         android:id="@+id/spinner_service_category"
                         android:layout_width="0dp"
                         android:layout_height="0dp"
+                        android:layout_marginTop="8dp"
                         android:background="@drawable/ic_spinner"
                         android:layout_marginEnd="24dp"
                         app:layout_constraintStart_toEndOf="@id/layout_service_tab"
