--- a/app/src/main/res/layout/dialog_get_picture.xml
+++ b/app/src/main/res/layout/dialog_get_picture.xml
@@ -21,7 +21,8 @@
         android:id="@+id/tv_select_way"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/iv_dialog_image_exit"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:text="이미지 경로를 선택하세요."
