--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
     <color name="sharehands_red">#FF0000</color>
     <color name="kakao_yellow">#FFFF00</color>
     <color name="btn_gray">#E1E1E1</color>
+    <color name="spinner_color">#F2F3F9</color>
 </resources>
