--- a/app/src/main/res/drawable/checkbox_day_unselected.xml
+++ b/app/src/main/res/drawable/checkbox_day_unselected.xml
@@ -4,7 +4,7 @@
   <!-- Background -->
   <item>
     <shape android:shape="rectangle">
-      <solid android:color="@android:color/white"/>
+      <solid android:color="@color/item_color"/>
       <corners android:radius="10dp"/>
       <stroke android:color="#717171" android:width="2dp"/>
     </shape>
