--- a/app/src/main/res/drawable/rectangle_shadow_stroke.xml
+++ b/app/src/main/res/drawable/rectangle_shadow_stroke.xml
@@ -8,42 +8,6 @@
           android:bottom="2.5dp" />
 
       <corners android:radius="20dp"/>
-      <solid android:color="#00CCCCCC" />
-    </shape>
-  </item>
-  <item>
-    <shape>
-      <padding
-          android:bottom="2.5dp" />
-
-      <corners android:radius="20dp"/>
-      <solid android:color="#06CCCCCC" />
-    </shape>
-  </item>
-  <item>
-    <shape>
-      <padding
-          android:bottom="2.5dp" />
-
-      <corners android:radius="20dp"/>
-      <solid android:color="#09CCCCCC" />
-    </shape>
-  </item>
-  <item>
-    <shape>
-      <padding
-          android:bottom="2.5dp"/>
-
-      <corners android:radius="20dp"/>
-      <solid android:color="#0BCCCCCC" />
-    </shape>
-  </item>
-  <item>
-    <shape>
-      <padding
-          android:bottom="2.5dp" />
-
-      <corners android:radius="20dp"/>
       <solid android:color="#0DCCCCCC" />
     </shape>
   </item>
@@ -99,7 +63,7 @@
   <!-- Background -->
   <item>
     <shape android:shape="rectangle">
-      <solid android:color="@android:color/white"/>
+      <solid android:color="@color/item_color"/>
       <corners android:radius="20dp"/>
       <stroke android:color="#717171" android:width="2dp"/>
     </shape>
