--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -134,6 +134,7 @@
                     android:layout_marginStart="22dp"
                     android:layout_marginTop="20dp"
                     android:src="@drawable/ic_clock"
+                    app:tint="@color/text_color"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tv_today_month" />
 
@@ -168,11 +169,10 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_service_today"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="12dp"
                     android:layout_marginEnd="20dp"
-                    android:background="@drawable/rectangle_shadow"
                     android:padding="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -184,6 +184,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="22dp"
                     android:layout_marginTop="20dp"
+                    app:tint="@color/text_color"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/rv_service_today"
                     android:src="@drawable/ic_checklist"/>
@@ -206,11 +207,10 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_check_list"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="12dp"
                     android:layout_marginEnd="20dp"
-                    android:background="@drawable/rectangle_shadow"
                     android:padding="20dp"
                     android:paddingBottom="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -222,6 +222,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_memo"
+                    app:tint="@color/text_color"
                     app:layout_constraintTop_toBottomOf="@id/rv_check_list"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginTop="20dp"
@@ -245,11 +246,10 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_memo"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="12dp"
                     android:layout_marginEnd="20dp"
-                    android:background="@drawable/rectangle_shadow"
                     android:padding="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
