--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -66,6 +66,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:hint="@string/search_description"
+                            android:textColorHint="@color/sharehands_gray"
+                            android:textColor="@color/text_color"
                             android:layout_marginStart="24dp"
                             android:textSize="16sp"
                             android:background="@null"
