--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -15,7 +15,8 @@
     <color name="sharehands_black">#1F2024</color>
     <color name="sharehands_gray">#D9D9D9</color>
     <color name="text_color">#FAFAFA</color>
-    <color name="item_color">#1F2024</color>
+    <color name="item_color">#FF000000</color>
     <color name="sharehands_red">#FF0000</color>
     <color name="kakao_yellow">#FFFF00</color>
+    <color name="spinner_color">#FF000000</color>
 </resources>
