--- a/app/src/main/res/layout/dialog_get_picture.xml
+++ b/app/src/main/res/layout/dialog_get_picture.xml
@@ -25,7 +25,7 @@
         android:layout_marginTop="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:text="이미지 경로를 선택하세요."
+        android:text="이미지 경로를 선택하세요"
         android:textColor="@color/black"
         android:textStyle="bold"
         android:textSize="20sp"/>
@@ -54,6 +54,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="카메라"
+            android:textColor="@color/icon_unfilled"
             android:layout_marginTop="8dp"
             android:textSize="16sp"/>
 
@@ -83,6 +84,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="갤러리"
+            android:textColor="@color/icon_unfilled"
             android:layout_marginTop="8dp"
             android:textSize="16sp"/>
 
