--- a/app/src/main/res/layout/activity_location_search.xml
+++ b/app/src/main/res/layout/activity_location_search.xml
@@ -1,26 +1,170 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:app="http://schemas.android.com/apk/res-auto">
-    <data>
 
+    <data>
+        <variable
+            name="viewModel"
+            type="com.sharehands.sharehands_frontend.viewmodel.search.ServiceLocationViewModel" />
     </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
+
         <net.daum.mf.map.api.MapView
             android:id="@+id/map_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@id/layout_location_select"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <RelativeLayout
-            android:id="@+id/btn_location_select"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:id="@+id/iv_go_back"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:background="@drawable/ic_button_green"/>
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="20dp"
+            android:padding="12dp"
+            android:background="@drawable/ic_arrow_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
+        <RelativeLayout
+            android:id="@+id/layout_location_select"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/item_color"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+
+                <TextView
+                    android:id="@+id/tv_select_location_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="20dp"
+                    android:text="봉사 장소를 선택해주세요"
+                    android:textColor="@color/text_color"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/tv_select_location_desc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:text="마커를 길게 눌러 이동시켜 장소를 설정할 수 있습니다"
+                    android:textColor="@color/icon_unfilled"
+                    android:textSize="12sp"
+                    app:layout_constraintStart_toStartOf="@id/tv_select_location_title"
+                    app:layout_constraintTop_toBottomOf="@id/tv_select_location_title" />
+
+                <TextView
+                    android:id="@+id/tv_road_name_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
+                    android:text="도로명 주소"
+                    android:textColor="@color/text_color"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="@id/tv_select_location_title"
+                    app:layout_constraintTop_toBottomOf="@id/tv_select_location_desc" />
+
+                <TextView
+                    android:id="@+id/tv_road_name_content"
+                    android:layout_width="0dp"
+                    android:layout_height="24dp"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginEnd="20dp"
+                    android:background="@drawable/border_bottom"
+                    android:textColor="@color/text_color"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@id/tv_select_location_title"
+                    app:layout_constraintTop_toBottomOf="@id/tv_road_name_title" />
+
+                <TextView
+                    android:id="@+id/tv_location_detail_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="상세 주소"
+                    android:textColor="@color/text_color"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="@id/tv_select_location_title"
+                    app:layout_constraintTop_toBottomOf="@id/tv_road_name_content" />
+
+                <EditText
+                    android:id="@+id/edit_location_detail_content"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="36dp"
+                    android:hint=" 상세 주소를 입력하세요"
+                    android:textColor="@color/text_color"
+                    android:textColorHint="@color/icon_unfilled"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@id/tv_select_location_title"
+                    app:layout_constraintTop_toBottomOf="@id/tv_location_detail_title"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:onTextChanged="@{(s, start, before, count) -> viewModel.onDetailChanged(s, start, before, count)}"/>
+
+                <FrameLayout
+                    android:id="@+id/layout_button_confirm"
+                    android:layout_width="68dp"
+                    android:layout_height="36dp"
+                    app:layout_constraintTop_toBottomOf="@id/edit_location_detail_content"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginTop="20dp">
+
+                    <TextView
+                        android:id="@+id/tv_confirm_inactive"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/write_button"
+                        android:backgroundTint="@color/btn_gray"
+                        android:text="확인"
+                        android:textColor="@color/white"
+                        android:textStyle="bold"
+                        android:gravity="center"
+                        android:padding="8dp"
+                        android:textSize="16sp"
+                        android:visibility="visible"/>
+
+                    <TextView
+                        android:id="@+id/tv_confirm_active"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/write_button"
+                        android:text="확인"
+                        android:textColor="@color/white"
+                        android:textStyle="bold"
+                        android:gravity="center"
+                        android:padding="8dp"
+                        android:textSize="16sp"
+                        android:visibility="invisible"/>
+
+                </FrameLayout>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </RelativeLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
