--- a/app/src/main/res/drawable/bg_user_profile.xml
+++ b/app/src/main/res/drawable/bg_user_profile.xml
@@ -5,10 +5,10 @@
     android:viewportHeight="64">
   <path
       android:pathData="M20,0L170,0A20,20 0,0 1,190 20L190,44A20,20 0,0 1,170 64L20,64A20,20 0,0 1,0 44L0,20A20,20 0,0 1,20 0z"
-      android:fillColor="#E7F4E8"/>
+      android:fillColor="@color/item_color"/>
   <path
-      android:strokeWidth="1"
+      android:strokeWidth="2"
       android:pathData="M20,0.5L170,0.5A19.5,19.5 0,0 1,189.5 20L189.5,44A19.5,19.5 0,0 1,170 63.5L20,63.5A19.5,19.5 0,0 1,0.5 44L0.5,20A19.5,19.5 0,0 1,20 0.5z"
-      android:fillColor="#00000000"
-      android:strokeColor="#C3E3DB"/>
+      android:fillColor="@color/item_color"
+      android:strokeColor="@color/sharehands_green_strong"/>
 </vector>
