--- a/app/src/main/res/layout/activity_daily_calendar.xml
+++ b/app/src/main/res/layout/activity_daily_calendar.xml
@@ -116,15 +116,20 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginEnd="12dp">
 
                     <com.github.tlaabs.timetableview.TimetableView
+                        android:id="@+id/view_time_table"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        app:side_cell_width="20dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
+                        android:layout_marginTop="-42dp"
                         app:column_count="2"
-                        app:header_title="@array/daily_timetable_header"/>
+                        app:header_title="@array/daily_timetable_header" />
 
                     <!--                <androidx.recyclerview.widget.RecyclerView-->
                     <!--                    android:id="@+id/rv_daily_schedules"-->
