--- a/app/src/main/res/layout/activity_monthly_calendar.xml
+++ b/app/src/main/res/layout/activity_monthly_calendar.xml
@@ -145,7 +145,7 @@
                         android:layout_marginStart="20dp"
                         android:text="x월의 봉사 계획"
                         android:textSize="20sp"
-                        android:textColor="@color/black"
+                        android:textColor="@color/text_color"
                         android:textStyle="bold"
                         android:layout_weight="5"/>
 
